tests/neg/i7742.scala
object A {
    for // error // error
}